2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimageundo.[ch]: add support for IMAGE_GRID and
	IMAGE_COLORMAP undos.

	* app/core/gimpimage-undo-push.c: use GimpImageUndo for grid and
	colormap undos.

2007-01-29  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-undo-push.[ch]: return a GimpUndo* instead
	of gboolean from all undo_push functions. Simplifies the new
	properly done functions quite a bit.

2007-01-29  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpchannelpropundo.[ch]: new undo class which handles
	CHANNEL_REPOSITION and CHANNEL_COLOR.

	* app/core/gimpimage-undo-push.c: use the new undo class and
	remove the resp. code here.

2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimplayerpropundo.[ch]: new undo class which handles
	LAYER_REPOSITION, LAYER_MODE, LAYER_OPACITY and LAYER_LOCK_ALPHA.

	* app/core/gimpimage-undo-push.c: use the new undo class and
	remove the resp. code here.

2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpitempropundo.[ch]: new undo class which handles
	ITEM_RENAME, ITEM_DISPLACE, ITEM_VISIBILITY and ITEM_LINKED undos.

	* app/core/gimpimage-undo-push.c: use the new undo class and
	remove the resp. code here.

2007-01-28  Michael Natterer  <mitch@gimp.org>

	* app/core/Makefile.am
	* app/core/core-types.h
	* app/core/gimpimageundo.[ch]: new undo class which handles
	GIMP_UNDO_IMAGE_TYPE, GIMP_UNDO_IMAGE_SIZE and
	GIMP_UNDO_IMAGE_RESOLUTION.

	* app/core/gimpimage-undo-push.c: use the new undo class and
	remove the resp. code here.

	* app/core/gimpimage-undo.h: changed include guards to not
	conflict with gimpimageundo.h

2007-01-28  Sven Neumann  <sven@gimp.org>

	* app/dialogs/authors.xsl: fixed spelling of "auto-generated".

	* app/tools/gimprectangletool.c: removed unused declaration.
