@@ -768,8 +768,8 @@ gimp_undo_type_get_type (void)
     { GIMP_UNDO_GROUP_IMAGE_LAYERS_MERGE, "GIMP_UNDO_GROUP_IMAGE_LAYERS_MERGE", "group-image-layers-merge" },
     { GIMP_UNDO_GROUP_IMAGE_VECTORS_MERGE, "GIMP_UNDO_GROUP_IMAGE_VECTORS_MERGE", "group-image-vectors-merge" },
     { GIMP_UNDO_GROUP_IMAGE_QUICK_MASK, "GIMP_UNDO_GROUP_IMAGE_QUICK_MASK", "group-image-quick-mask" },
-    { GIMP_UNDO_GROUP_IMAGE_GUIDE, "GIMP_UNDO_GROUP_IMAGE_GUIDE", "group-image-guide" },
     { GIMP_UNDO_GROUP_IMAGE_GRID, "GIMP_UNDO_GROUP_IMAGE_GRID", "group-image-grid" },
+    { GIMP_UNDO_GROUP_IMAGE_GUIDE, "GIMP_UNDO_GROUP_IMAGE_GUIDE", "group-image-guide" },
     { GIMP_UNDO_GROUP_IMAGE_SAMPLE_POINT, "GIMP_UNDO_GROUP_IMAGE_SAMPLE_POINT", "group-image-sample-point" },
     { GIMP_UNDO_GROUP_DRAWABLE, "GIMP_UNDO_GROUP_DRAWABLE", "group-drawable" },
     { GIMP_UNDO_GROUP_DRAWABLE_MOD, "GIMP_UNDO_GROUP_DRAWABLE_MOD", "group-drawable-mod" },
@@ -799,10 +799,10 @@ gimp_undo_type_get_type (void)
     { GIMP_UNDO_IMAGE_TYPE, "GIMP_UNDO_IMAGE_TYPE", "image-type" },
     { GIMP_UNDO_IMAGE_SIZE, "GIMP_UNDO_IMAGE_SIZE", "image-size" },
     { GIMP_UNDO_IMAGE_RESOLUTION, "GIMP_UNDO_IMAGE_RESOLUTION", "image-resolution" },
-    { GIMP_UNDO_IMAGE_GUIDE, "GIMP_UNDO_IMAGE_GUIDE", "image-guide" },
     { GIMP_UNDO_IMAGE_GRID, "GIMP_UNDO_IMAGE_GRID", "image-grid" },
-    { GIMP_UNDO_IMAGE_SAMPLE_POINT, "GIMP_UNDO_IMAGE_SAMPLE_POINT", "image-sample-point" },
     { GIMP_UNDO_IMAGE_COLORMAP, "GIMP_UNDO_IMAGE_COLORMAP", "image-colormap" },
+    { GIMP_UNDO_IMAGE_GUIDE, "GIMP_UNDO_IMAGE_GUIDE", "image-guide" },
+    { GIMP_UNDO_IMAGE_SAMPLE_POINT, "GIMP_UNDO_IMAGE_SAMPLE_POINT", "image-sample-point" },
     { GIMP_UNDO_DRAWABLE, "GIMP_UNDO_DRAWABLE", "drawable" },
     { GIMP_UNDO_DRAWABLE_MOD, "GIMP_UNDO_DRAWABLE_MOD", "drawable-mod" },
     { GIMP_UNDO_MASK, "GIMP_UNDO_MASK", "mask" },
@@ -856,8 +856,8 @@ gimp_undo_type_get_type (void)
     { GIMP_UNDO_GROUP_IMAGE_LAYERS_MERGE, N_("Merge layers"), NULL },
     { GIMP_UNDO_GROUP_IMAGE_VECTORS_MERGE, N_("Merge paths"), NULL },
     { GIMP_UNDO_GROUP_IMAGE_QUICK_MASK, N_("Quick Mask"), NULL },
-    { GIMP_UNDO_GROUP_IMAGE_GUIDE, N_("Guide"), NULL },
     { GIMP_UNDO_GROUP_IMAGE_GRID, N_("Grid"), NULL },
+    { GIMP_UNDO_GROUP_IMAGE_GUIDE, N_("Guide"), NULL },
     { GIMP_UNDO_GROUP_IMAGE_SAMPLE_POINT, N_("Sample Point"), NULL },
     { GIMP_UNDO_GROUP_DRAWABLE, N_("Layer/Channel"), NULL },
     { GIMP_UNDO_GROUP_DRAWABLE_MOD, N_("Layer/Channel modification"), NULL },
@@ -887,10 +887,10 @@ gimp_undo_type_get_type (void)
     { GIMP_UNDO_IMAGE_TYPE, N_("Image type"), NULL },
     { GIMP_UNDO_IMAGE_SIZE, N_("Image size"), NULL },
     { GIMP_UNDO_IMAGE_RESOLUTION, N_("Image resolution change"), NULL },
-    { GIMP_UNDO_IMAGE_GUIDE, N_("Guide"), NULL },
     { GIMP_UNDO_IMAGE_GRID, N_("Grid"), NULL },
-    { GIMP_UNDO_IMAGE_SAMPLE_POINT, N_("Sample Point"), NULL },
     { GIMP_UNDO_IMAGE_COLORMAP, N_("Change indexed palette"), NULL },
+    { GIMP_UNDO_IMAGE_GUIDE, N_("Guide"), NULL },
+    { GIMP_UNDO_IMAGE_SAMPLE_POINT, N_("Sample Point"), NULL },
     { GIMP_UNDO_DRAWABLE, N_("Layer/Channel"), NULL },
     { GIMP_UNDO_DRAWABLE_MOD, N_("Layer/Channel modification"), NULL },
     { GIMP_UNDO_MASK, N_("Selection mask"), NULL },
